# esempio_uv

./: azure-pipelines.yml  main.py  pyproject.toml
.github/workflows/: prova-pipeline.yml
src/: operazioni.py
tests/: test_media.py  test_somma.py
