[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "pandas>=3.0.2",
    "protobuf<5.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
]
